# migrations

./: Cargo.toml
migrations/: 00002_user_profile_table.sql  00003_mux_table.sql  0004_add_upload_id_to_mux_videos_table.sql  0005_make_mux_fields_nullable.sql  0006_remove_order_from_videos_table.sql  0007_change_price_column_type.sql  0008_add_price_and_value_in_videos.sql
src/: lib.rs
